adjusting block padding to avoid overflow

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -577,11 +577,11 @@ footer {
             letter-spacing: 1px;
             a {
                 width:23%;
-                min-width:140px;
+                min-width:150px;
                 height:150px;
                 margin-bottom:0;
                 display:block;
-                padding:2em 1.5em;
+                padding:1em 1.5em;
                 float:left;
                 background-color:rgba(142,130,100,.2); 
                 margin:0 10px 10px 0;
